# fast_api_shortcut

./: .env  .gitignore  config.py  database.py  main.py  pyproject.toml
api/: router.py
api/v1/: router.py
api/v1/auth/: dependencies.py  router.py
api/v1/auth/login/: endpoint.py
api/v1/tasks/: responses.py  router.py
api/v1/tasks/active_users/: endpoint.py  response.py
api/v1/tasks/common/: schemas.py
api/v1/tasks/create/: endpoint.py  request.py  response.py
api/v1/tasks/delete/: endpoint.py
api/v1/tasks/get_by_id/: endpoint.py
api/v1/tasks/get_list/: endpoint.py  request.py
api/v1/tasks/stats/by_day/: endpoint.py  response.py
api/v1/tasks/stats/total/: endpoint.py  response.py
api/v1/tasks/update/: endpoint.py  request.py
api/v1/users/: dependencies.py  response.py  responses.py  router.py  validators.py
api/v1/users/common/: schemas.py
api/v1/users/create/: endpoint.py  request.py  response.py
api/v1/users/delete/: endpoint.py
api/v1/users/get_by_id/: endpoint.py
api/v1/users/get_list/: endpoint.py
api/v1/users/register/: endpoint.py  request.py
api/v1/users/update/: endpoint.py  request.py
auth/: jwt.py
common/: errors.py  models.py
tasks/: constants.py  dto.py  models.py  services.py
users/: dto.py  models.py  security.py  services.py
