[project]
name = "fast-api-shortcut"
version = "0.1.0"
description = "FastApi project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite==0.22.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.0",
    "black==26.5.1",
    "click==8.4.1",
    "colorama==0.4.6",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.138.0",
    "greenlet==3.5.2",
    "h11==0.16.0",
    "httptools==0.8.0",
    "idna==3.18",
    "mypy-extensions==1.1.0",
    "packaging==26.2",
    "pathspec==1.1.1",
    "platformdirs==4.10.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.2",
    "python-dotenv==1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "pytokens==0.4.1",
    "pyyaml==6.0.3",
    "sqlalchemy==2.0.51",
    "starlette==1.3.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.49.0",
    "watchfiles==1.2.0",
    "websockets==16.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.22",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort — сортировка импортов
]

[tool.ruff.lint.isort]
known-first-party = ["api", "auth", "common", "tasks", "users", "database", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
